--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="style.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	<script src="main.js"></script>
+	<script src="entity.js"></script>
 </head>
 <body>
 	<canvas></canvas>
