--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	<script src="sprites.js"></script>
 	<script src="main.js"></script>
+	<script src="terrain.js"></script>
 	<script src="entity.js"></script>
 </head>
 <body>
