Player controls update, rolling momentum and conversion in controls

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="main.js"></script>
 	<script src="terrain.js"></script>
 	<script src="entity.js"></script>
+	<script src="player.js"></script>
 </head>
 <body>
 	<canvas></canvas>
