Menu start, jumping through "oneWay" terrain, rocks/shell damage
-basic collision masking

--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Eggbert</title>
+	<title>Egg Game</title>
 	<link href="style.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	<script src="sprites.js"></script>
@@ -11,12 +11,8 @@
 	<script src="entity.js"></script>
 	<script src="player.js"></script>
 	<script src="credits.js"></script>
-	<script src="menu.js"></script>
 </head>
 <body>
-	<canvas class="hidden"></canvas>
-	<div class="menu">
-		<a class="play">Play</a>
-	</div>
+	<canvas></canvas>
 </body>
 </html>
