Begin sound api, updated menu

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <body>
 	<canvas class="hidden"></canvas>
 	<div class="menu">
-		<a class="play">Play</a>
+		<p style="font-size: 80px">EGGBERT</p>
+		<a class="menuElement" id="play">Play</a>
+		<a class="menuElement" id="credits">Credits</a>
 	</div>
 </body>
 </html>
