Update credits to be part of index

--- a/index.html
+++ b/index.html
@@ -20,5 +20,23 @@
 		<a class="menuElement" id="play">Play</a>
 		<a class="menuElement" id="credits">Credits</a>
 	</div>
-</body>
-</html>
+	<div class="credits; hidden">
+		<p style="font-size: 80px">EGGBERT</p>
+		<p style="text-align: left; float: left; width: 30%; padding-left: 20%">
+			Modeling:<br>
+			Code:<br>
+			Story:<br>
+			Physics:<br>
+			Animation:<br>
+			Sound direction:<br>
+		</p>
+		<p style="text-align: right; float: left; width: 30%; padding-right: 20%">
+			Keavon<br>
+			Cullen Carns<br>
+			Keavon / Cullen Carns<br>
+			Cullen Carns<br>
+			Keavon<br>
+			Cullen Carns / Keavon<br>
+		</p>
+	</div></body>
+	</html>
