--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<a class="menuElement" id="play">Play</a>
 		<a class="menuElement" id="credits">Credits</a>
 	</div>
-	<div class="credits" class="hidden">
+	<div class="credits hidden">
 		<p style="font-size: 80px">EGGBERT</p>
 		<p style="text-align: left; float: left; width: 30%; padding-left: 20%">
 			Modeling:<br>
