--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script src="player.js"></script>
 	<script src="menu.js"></script>
 </head>
-<body>
+<body style="background: #77aaee">
 	<canvas class="hidden"></canvas>
 	<div class="menu">
 		<p style="font-size: 80px">EGGBERT</p>
@@ -21,7 +21,7 @@
 	</div>
 	<div class="credits hidden">
 		<p style="font-size: 80px">EGGBERT</p>
-		<p style="text-align: left; float: left; width: 30%; padding-left: 20%">
+		<p style="text-align: left; float: left; width: 30%; padding-left: 10%">
 			Modeling:<br>
 			Code:<br>
 			Story:<br>
@@ -29,13 +29,15 @@
 			Animation:<br>
 			Sound direction:<br>
 		</p>
-		<p style="text-align: right; float: left; width: 30%; padding-right: 20%">
-			Keavon<br>
+		<p style="text-align: right; float: left; width: 50%; padding-right: 10%">
+			Keavon Chambers<br>
 			Cullen Carns<br>
-			Keavon / Cullen Carns<br>
+			Keavon Chambers / Cullen Carns<br>
 			Cullen Carns<br>
-			Keavon<br>
-			Cullen Carns / Keavon<br>
+			Keavon Chambers<br>
+			Cullen Carns / Keavon Chambers<br>
 		</p>
-	</div></body>
-	</html>
+		<a class="menuElement" id="menu">Back</a>
+	</div>
+</body>
+</html>
