Added progress bar, fixed issues with force slide, added phasing (S)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Eggbert</title>
 	<link href="style.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
 	<script src="sprites.js"></script>
 	<script src="main.js"></script>
 	<script src="terrain.js"></script>
@@ -12,7 +13,7 @@
 	<script src="player.js"></script>
 	<script src="menu.js"></script>
 </head>
-<body style="background: #77aaee">
+<body style="background: #77aaee; font-family: 'Indie Flower', cursive;">
 	<canvas class="hidden"></canvas>
 	<div class="menu">
 		<p style="font-size: 80px">EGGBERT</p>
