Added level imagery

--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
 	<script src="player.js"></script>
 	<script src="menu.js"></script>
 </head>
-<body style="background: #77aaee; font-family: 'Indie Flower', cursive;">
+<body style="background: #5d87b4; font-family: 'Indie Flower', cursive;">
 	<canvas class="hidden"></canvas>
 	<div class="menu">
-		<p style="font-size: 80px">EGGBERT</p>
+		<p style="font-size: 80px; margin: 20px 0;">EGGBERT</p>
+		<img src="assets/mascot/eggbert_in_egg.png" width="400" height="400" style="margin-bottom: -63px;">
 		<a class="menuElement" id="play">Play</a>
 		<a class="menuElement" id="credits">Credits</a>
 	</div>
 	<div class="credits hidden">
-		<p style="font-size: 80px">EGGBERT</p>
+		<p style="font-size: 80px; margin: 20px 0;">EGGBERT</p>
+		<div>
+			<img src="assets/mascot/eggbert_no_egg.png" width="400" height="400">
+		</div>
 		<p style="text-align: left; float: left; width: 30%; padding-left: 10%">
 			Modeling:<br>
 			Code:<br>
